--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
 	path = intpath/pl_foreign_currency
 	url = git@github.com:intpath/pl_foreign_currency.git
 	branch = master
+
+[submodule "intpath/product_bundle_pack"]
+	path = intpath/product_bundle_pack
+	url = git@github.com:intpath/product_bundle_pack.git
+	branch = 14
